<resources>
    <string name="app_name">RL Questlog</string>
    <string name="title_quests">Aufgaben</string>
    <string name="title_doneQuests">Erledigt</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_hello">Hallo!\nBitte verrate mir deinen Namen!</string>
    <string name="et_name_hint">Wie heißt du?</string>
    <string name="btn_okay_text">OKAY!</string>
    <string name="workPreference">Woran möchtest du arbeiten?</string>
    <string name="tidiness">Ordnung</string>
    <string name="work">Arbeit</string>
    <string name="health">Gesundheit</string>
    <string name="fitness">Fitness</string>
    <string name="diet">Ernährung</string>
    <string name="knowledge">Wissen</string>
    <string name="toastMsgCb">Du musst mindestens\neine Option auswählen!</string>
    <string name="toastMsgName">Bitte gib einen Namen ein!</string>
    <string name="overflow_pref">Einstellungen</string>
    <string name="save">Speichern</string>
    <string name="name">Name</string>
    <string name="tv_exp">"EP: "</string>
    <string name="defaultZero">0</string>
    <string name="tv_lvl">"LEVEL: "</string>
    <string name="tv_questTitle">"Titel: "</string>
    <string name="te_title">Titel der Aufgabe</string>
    <string name="tv_topic">Kategorie</string>
    <string name="tv_difficulty">Schwierigkeit</string>
    <string name="te_short_description">Trage eine kurze Beschreibung der Aufgabe ein!</string>
    <string name="tv_points">Punkte:</string>
    <string name="te_longdescription_hint">Trage hier eine etwas längere Beschreibung der Aufgabe ein!\nDazu gehören könnte z.B. warum diese Aufgabe sinnvoll ist und was dich motiviert, sie anzugehen!</string>
    <string name="f_progress">Fortschritt</string>
    <string name="no_quests_available">Keine Aufgaben mehr da!\nWiederhole eine Aufgabe, füge eine eigene hinzu\noder versuch ein paar andere Kategorien!</string>
    <string name="lvl_caps">"LEVEL: "</string>
    <string name="register">Registrieren</string>
    <string name="login">Login</string>
</resources>
