<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.example.questtask.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <CheckBox
            android:id="@+id/cb_tidiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tidiness"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tv_tidiness" />

        <CheckBox
            android:id="@+id/cb_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_work"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tv_work" />

        <CheckBox
            android:id="@+id/cb_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_health"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tv_health" />

        <CheckBox
            android:id="@+id/cb_fitness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_fitness"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tv_fitness" />

        <CheckBox
            android:id="@+id/cb_diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_diet"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tv_diet" />

        <CheckBox
            android:id="@+id/cb_knowledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_knowledge"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tv_knowledge" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_editname" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/tv_editname"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/tv_editname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/et_name_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/workPreference"
            app:layout_constraintStart_toStartOf="@+id/et_name"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <TextView
            android:id="@+id/tv_tidiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidiness"
            app:layout_constraintBottom_toTopOf="@+id/tv_work"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/tv_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            app:layout_constraintBottom_toTopOf="@+id/tv_health"
            app:layout_constraintStart_toStartOf="@+id/tv_tidiness"
            app:layout_constraintTop_toBottomOf="@+id/tv_tidiness" />

        <TextView
            android:id="@+id/tv_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            app:layout_constraintBottom_toTopOf="@+id/tv_fitness"
            app:layout_constraintStart_toStartOf="@+id/tv_work"
            app:layout_constraintTop_toBottomOf="@+id/tv_work" />

        <TextView
            android:id="@+id/tv_fitness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitness"
            app:layout_constraintBottom_toTopOf="@+id/tv_diet"
            app:layout_constraintStart_toStartOf="@+id/tv_health"
            app:layout_constraintTop_toBottomOf="@+id/tv_health" />

        <TextView
            android:id="@+id/tv_diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet"
            app:layout_constraintBottom_toTopOf="@+id/tv_knowledge"
            app:layout_constraintStart_toStartOf="@+id/tv_fitness"
            app:layout_constraintTop_toBottomOf="@+id/tv_fitness" />

        <TextView
            android:id="@+id/tv_knowledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knowledge"
            app:layout_constraintBottom_toTopOf="@+id/btn_settings"
            app:layout_constraintStart_toStartOf="@+id/tv_diet"
            app:layout_constraintTop_toBottomOf="@+id/tv_diet" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/btn_settings"
            app:layout_constraintTop_toBottomOf="@+id/cb_knowledge"
            tools:layout_editor_absoluteX="-58dp">

        </View>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="144dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>