<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.questtask.ui.donequests.DoneQuestsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.donequests.DoneQuestsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/underAppbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/navBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progress_xp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_points"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/tv_exp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name"
                app:layout_constraintStart_toEndOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/defaultZero"
                app:layout_constraintBottom_toBottomOf="@+id/tv_exp"
                app:layout_constraintStart_toEndOf="@+id/tv_exp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lvlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_lvl"
                app:layout_constraintBottom_toBottomOf="@+id/tv_points"
                app:layout_constraintEnd_toStartOf="@+id/tv_lvlPoints"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lvlPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/defaultZero"
                app:layout_constraintBottom_toBottomOf="@+id/tv_lvlText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/underAppbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>